@@ -1,6 +1,6 @@
 AUX ambdec-0.5.1-Makefile.patch 1096 SHA256 e5cb3b7aeabd164a869a3b5c476b0ea35f127cfec83987b8935d2b1cb9b7e47a SHA512 6b58e1c632d041b6d68b829c5407671edf32410afd9ef04d6254f69fd3a18710557b4ae34452c77ee628a341a0ae1b3ab95a9e046ba9e30fe7c145df721bc74b WHIRLPOOL 14869deee95f650079aa4801764f3f49dd396c8555e1ae0d975c9a59b2115641f19889cee2d0e8609e54e63cdd3da3f9bf458c1192c2830cbfe959157ed7e1bd
 DIST ambdec-0.5.1.tar.bz2 43347 SHA256 0497636ac97b4883e45348604419980f7c525e2eebede7026550cc43f85e8074 SHA512 91f755259247b8a04c80c2f50f961e64afe9ffec24037b09ad8f16c58d3761c250c4174fe12607c84080064677242fcfa54ff1fea391a8a45e15981c006824db WHIRLPOOL 7d29c1e165c1a81fb3af949326e2974153090a290deca779d876fecf38fbdacb79e59b1e63ba14c34ee9579417abd852791331dd9920f4c054dec19447ccaa3f
 DIST ambdec-manual.pdf 206659 SHA256 a536b98ba1c142a9cbea51595b09c6cd44f0ec7e83fccbf113cde49756f85800 SHA512 373acb5a0509daacbb16d52da6309418ba13a76d4c53a88c13e0eb822ecf7c2aa5f0108f7f1830a36120b4eef9538aadb4c318ecdff2c04e9ee524d7fc1aaa66 WHIRLPOOL 4b52fdc4e0145dcb1977799d44f80708573a878e51e40d14ae3ef685c3c497dc1554050e188a1c0a4d70690dad69269b03999ebe088d225cf57785e8c031548e
-EBUILD ambdec-0.5.1.ebuild 1034 SHA256 bb1aca0fefee57099d8a100bf1a5c65aa7fad6f5c8c071bd7ce3b05007574216 SHA512 7cba09c445a761e8042c82625c41a9b37c9bd3828a884c0d493603296268d0058a6182db5efd631eb8ef98d9399f363d542e410fd3b3f1ee175d64b22343224e WHIRLPOOL d9882bba62d5787afc3f31ebc1bade58a37ed13cce1e28532868570a62c7fd5ba33f77e1e49e62db681cfe9f5306c19babb0fe17a624e5604ded18ed0714252f
-MISC ChangeLog 718 SHA256 50b0af7cd433863458e604b34f1ceac0b8e5e4fb5771372f8d589aa6eeba4a83 SHA512 38e7e0ffde2ff415f34a72ae8495cd97871fd85e91bab3b1dcd215ec571e053a942ae783fab2dba489b03824f3ddd934b968f1336f9e44676e3f363983d6c4e3 WHIRLPOOL ce6456ebd6ca0ed9d6263333710f6569bb542db2f5245557b0094067e0ac56e5001cdff1aeaacfa455e921990f6d8d2b5342909d5c1d8552a31e1d03ef9c0ca7
-MISC metadata.xml 268 SHA256 96629b266b743f566c29158d4498edeeb1cd6b1f0cd9629e42d4f10b4da82f89 SHA512 3d709a016692f887d642d19b2644c10a09f666133f1f035b8a4c10e5772fbb39fa84a856a496d392594ccf850739fbf46ffa78ecc74214e8342ee97676b375e9 WHIRLPOOL 17c886c5b97925bd9223c0210170a63e55a2c2a238ae81ebf8efa14109d790406f45d0773d63bea825c1e40b058bd9e20a5d9c264da4db7c8fd2e556ecd83b2a
+EBUILD ambdec-0.5.1.ebuild 1153 SHA256 8ceeea98bcc5d9131554b7def8e3f20d1251fcd08edd29f165fc120c09318e79 SHA512 c2a3c665d62af7479fd6e46d6464e3de3fb80ca84a878c563601659019daddb4d995cc3b85900485cd5f6cb7a11a3c617dc2f638d49c2bff0e034b8723c5528d WHIRLPOOL 48345d45048644f4fcba3790fa39942df58ccd6d0bd29f67db1d938bba3d9509b1d82922ee8f8696db5be35dc465974b192f16325745052814506a44265eff68
+MISC ChangeLog 884 SHA256 28d9ba3dae4d5d45774278a91c549c7bb189d05a0e80979eb0f153f938646f63 SHA512 2376213d20d87ea210684d3da808afb3587d0ec5bf6c62af3fa5f2cca7283e5c2facc2d906d6dce49981df265666a1067fb46d88abb740edeab5d0896ef9940d WHIRLPOOL b46317f655f84372c18763ed42d29281532958de85c5919504d703023e53ed19bd1ae9456cd123095dd7b227faa1956d04536a6689e17d8419faec85e73a3781
+MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
