@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Dec 2013 Dominique Michel <dominique_libre@users.sourceforge.net>
+  ambdec-0.5.1.ebuild, metadata.xml: make repoman happy; add CFLAGS and LDFLAGS
+  for gthread
+
   06 Nov 2010; Dominique Michel <dominique_libre@sourceforge.net>
   +ambdec-0.5.1.ebuild with new SRC_URI, moved to EAPI=2, clean-up
   -ambdec-0.4.2.ebuild
